# Crawl-for-web-archive

./: .gitignore  README.md  crawl.py  pyproject.toml  test_fix.py
docs/: architecture.md  development.md  user-guide.md
src/wayback_crawler/: __init__.py  cdx.py  config.py  fetcher.py  main.py  media_downloader.py  models.py  parser.py  storage.py  utils.py
src/wayback_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/wayback_crawler/parsers/: __init__.py  base.py  twitter_json.py  twitter_new.py  twitter_old.py
