[project]
name = "wayback-crawler"
version = "0.1.0"
description = "Wayback Machine crawler for extracting structured data from archived web pages"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "aiosqlite>=0.20.0",
    "pytest>=9.1.1",
    "pytest-httpx>=0.36.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
wayback-crawler = "wayback_crawler.main:app"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests that run the full pipeline with mocked HTTP",
]
